[project]
name = "rclpy-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vassily Lyutsarev", email = "vassilyl@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.10.0",
    "numpy>=2.2.6",
]

[project.scripts]
rclpy-async = "rclpy_async:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
